styles/filtered-temples.css
:root {
    --dark-blue: #1A2E34;
    --navyish: #2D5562;
    --tea-green: #CFE0C3;
}

* {
    padding: 0;
    margin: 0;
    font-family: "Ancizar Serif";
}

main {
    max-width: 800px;
    margin: 0 auto;
}

main h2 {
    text-align: center;
    margin-top: 10px;
}

header {
    background-color: var(--dark-blue);
}

nav {
    max-width: 100%;
    margin: 0.5rem auto;
}

.menu-title {
    font-size: 24px;
    font-weight: bold;
    color: var(--tea-green);
    padding-top: 1rem;
    padding-left: 1rem;
    padding-bottom: 1rem;
}

.open-menu-title {
    padding-bottom: 0;
}

#menu::before {
    content: "☰";
}

#menu.open::before {
    content: "❎";
}

#menu {
    background: none;
    font-size: 1.5rem;
    border: 0;
    position: absolute;
    top: 0.75rem;
    right: 1.2rem;
    color: var(--tea-green);
}

.navigation {
    list-style: none;
    max-width: 100%;
    margin-top: 1rem;
    width: 100%;
    text-align: center;
}

.navigation a {
    text-decoration: none;
    font-size: 20px;
    width: 100%;
    color: var(--tea-green);
}

.navigation li {
    padding: 0.45rem;
}

.navigation li:hover {
    background-color: var(--tea-green);
    font-weight: bold;
    color: var(--dark-blue);
}

.navigation li:hover:visited {
    color: var(--dark-blue);
}

.navigation {
    display: none;
    width: 100%;
}

.open {
    display: block;
}

.navigation a:visited {
    text-decoration: none;
    color: var(--tea-green);
}

.navigation a:hover:visited {
    color: var(--dark-blue);
}

.album-grid {
    display: grid;
    grid-template-columns: 1fr;
    row-gap: 1rem;
    column-gap: 1rem;
    padding: 1rem;
    margin: 0 auto;
}

.album-grid figure {
    max-width: 100%;
}

.album-grid figure img {
    max-width: 100%;
}

footer {
    text-align: center;
    background-color: var(--dark-blue);
    color: var(--tea-green);
    padding-top: 0.8rem;
    padding-bottom: 0.8rem;
}

.temple-card {
    border: 2px solid rgba(20, 20, 20, 0.1);
    display: block;
    text-align: center;
    padding: 1rem;
    background-color: #eeeeee;
    width: 240px;
}

.temple-card>h3 {
    font-size: 24px;
}

.temple-card>ul {
    list-style: none;
    padding: 1rem;
}

.temple-card>img {
    box-shadow: 0px 0px 5px 5px rgba(20, 20, 20, 0.2);
    max-width: 95%;
    height: auto;
}

.temple-card>ul>li>span {
    font-size: 0.8rem;
}

/* Media queries and their associated rules below */

@media screen and (min-width: 640px) {
    .album-grid {
        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    }

    body {
        max-width: 1200px;
    }

    header {
        display: grid;
        grid-template-columns: 180px 1fr;
    }

    .menu-title {
        padding-top: 1.75rem;
    }

    nav {
        grid-column: 2 / 3;
    }

    .navigation {
        display: flex;
        flex-direction: row;
        column-gap: 30px;
    }

    .navigation a {
        font-size: 24px;
    }

    #menu {
        display: none;
    }

}

@media screen and (min-width: 840px) {
    .navigation {
        column-gap: 60px;
    }
}

@media screen and (min-width: 1040px) {
    .navigation {
        column-gap: 80px;
    }
}

